[gd_scene load_steps=9 format=3 uid="uid://dsenhq16ac4oo"]

[ext_resource type="Script" uid="uid://by830mxx6jlot" path="res://Scripts/Menus/config.gd" id="1_kr0as"]
[ext_resource type="StyleBox" uid="uid://dolq1wjvg4ca3" path="res://Visual/fundo.tres" id="2_tkr1x"]
[ext_resource type="Theme" uid="uid://bujci4me1jles" path="res://Visual/Labels.tres" id="3_p4uu7"]
[ext_resource type="Theme" uid="uid://bq6xwlkcamw5v" path="res://Visual/saveBotao.tres" id="4_a7ocr"]
[ext_resource type="Theme" uid="uid://blmicg85n0boj" path="res://Visual/Fontes/botao.tres" id="4_p4uu7"]
[ext_resource type="PackedScene" uid="uid://cn0yfmj4x3uel" path="res://Scenes/Menus/painel_fundo.tscn" id="5_g5g34"]
[ext_resource type="Script" uid="uid://bjb4beg5ct1nm" path="res://Visual/teste_botao.gd" id="6_a7ocr"]
[ext_resource type="PackedScene" uid="uid://cvy7ticfaekmf" path="res://Scenes/Menus/resolucao.tscn" id="6_s4w24"]

[node name="Config" type="Control" node_paths=PackedStringArray("controleVolume", "controlVolumeMusica", "dificuldades")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kr0as")
controleVolume = NodePath("CanvasLayer/Panel/tudo/volumeGrid/HSlider")
controlVolumeMusica = NodePath("CanvasLayer/Panel/tudo/volumeGrid2/musicaSlider")
dificuldades = [NodePath("CanvasLayer/Panel/tudo/dificuldadegrid/Facil"), NodePath("CanvasLayer/Panel/tudo/dificuldadegrid/medio"), NodePath("CanvasLayer/Panel/tudo/dificuldadegrid/dificiç")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = -162.625
offset_right = 168.0
offset_bottom = 162.625
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("2_tkr1x")

[node name="tudo" type="GridContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -126.54
offset_right = 123.5
offset_bottom = 166.45999
grow_horizontal = 2
grow_vertical = 2

[node name="volume" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2
theme = ExtResource("3_p4uu7")
text = "Volume efeito sonoros:"
horizontal_alignment = 1

[node name="volumeGrid" type="GridContainer" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 4
columns = 3

[node name="Label2" type="Label" parent="CanvasLayer/Panel/tudo/volumeGrid"]
layout_mode = 2
theme = ExtResource("3_p4uu7")
text = "0"

[node name="HSlider" type="HSlider" parent="CanvasLayer/Panel/tudo/volumeGrid"]
layout_mode = 2
size_flags_horizontal = 3
value = 75.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/tudo/volumeGrid"]
layout_mode = 2
theme = ExtResource("3_p4uu7")
text = "100"

[node name="nada7" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2

[node name="musica" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2
theme = ExtResource("3_p4uu7")
text = "Volume musica:"
horizontal_alignment = 1

[node name="volumeGrid2" type="GridContainer" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 4
columns = 3

[node name="Label2" type="Label" parent="CanvasLayer/Panel/tudo/volumeGrid2"]
layout_mode = 2
theme = ExtResource("3_p4uu7")
text = "0"

[node name="musicaSlider" type="HSlider" parent="CanvasLayer/Panel/tudo/volumeGrid2"]
layout_mode = 2
size_flags_horizontal = 3
value = 75.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/tudo/volumeGrid2"]
layout_mode = 2
theme = ExtResource("3_p4uu7")
text = "100"

[node name="nada6" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2

[node name="resolucao" type="Button" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2
theme = ExtResource("4_a7ocr")
text = "- Resolução -"
script = ExtResource("6_a7ocr")
carregadorScena = true
scenaCarregar = ExtResource("6_s4w24")

[node name="nada4" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2

[node name="dificuldade" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2
theme = ExtResource("3_p4uu7")
text = "Dificuldade:"
horizontal_alignment = 1

[node name="nada5" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2

[node name="dificuldadegrid" type="GridContainer" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 35
columns = 6

[node name="Facil" type="CheckBox" parent="CanvasLayer/Panel/tudo/dificuldadegrid"]
layout_mode = 2
theme = ExtResource("4_p4uu7")
theme_override_font_sizes/font_size = 10
text = "Fácil"
alignment = 1

[node name="medio" type="CheckBox" parent="CanvasLayer/Panel/tudo/dificuldadegrid"]
layout_mode = 2
theme = ExtResource("4_p4uu7")
theme_override_font_sizes/font_size = 10
text = "Médio"
alignment = 1

[node name="dificiç" type="CheckBox" parent="CanvasLayer/Panel/tudo/dificuldadegrid"]
layout_mode = 2
theme = ExtResource("4_p4uu7")
theme_override_font_sizes/font_size = 10
text = "Difícil"
alignment = 1

[node name="nada8" type="Label" parent="CanvasLayer/Panel/tudo"]
layout_mode = 2

[node name="LabelConfig" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.5
offset_top = 24.795
offset_right = 85.5
offset_bottom = 47.79502
grow_horizontal = 2
theme = ExtResource("3_p4uu7")
theme_override_font_sizes/font_size = 22
text = "Configurações"

[node name="voltar" type="Button" parent="CanvasLayer"]
offset_left = 508.0
offset_top = 318.0
offset_right = 627.0
offset_bottom = 349.0
theme = ExtResource("4_a7ocr")
text = "voltar"
script = ExtResource("6_a7ocr")

[node name="painelFundo" parent="." instance=ExtResource("5_g5g34")]
layout_mode = 1

[connection signal="value_changed" from="CanvasLayer/Panel/tudo/volumeGrid/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/tudo/volumeGrid2/musicaSlider" to="." method="_on_musica_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Panel/tudo/dificuldadegrid/Facil" to="." method="_on_facil_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/tudo/dificuldadegrid/medio" to="." method="_on_medio_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/tudo/dificuldadegrid/dificiç" to="." method="_on_dificiç_pressed"]
[connection signal="pressed" from="CanvasLayer/voltar" to="." method="_on_button_pressed"]
